<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ing_richardavid.myform.SecondActivity">

    <TextView
        android:id="@+id/secondActivityIdTxtVName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/secondActivityIdRgGreetings"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:checkedButton="@+id/secondActivityIdRbGreeting"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/secondActivityIdSbAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/secondActivityIdRbGreeting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.48"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/secondActivityRadioBtnGreeting"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/space3"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/secondActivityIdRbFarewell"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/secondActivityRadioBtnFarewell"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/space3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/secondActivityIdSbAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:max="60"
        android:progress="18"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/secondActivityIdTxtVAgeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/secondActivityEditTxtAgeValue"
        android:textColor="@color/colorSecondaryText"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/secondActivityIdBtnOk"
        app:layout_constraintLeft_toLeftOf="@+id/secondActivityIdSbAge"
        app:layout_constraintRight_toRightOf="@+id/secondActivityIdSbAge"
        app:layout_constraintTop_toBottomOf="@+id/secondActivityIdSbAge"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/secondActivityEditTxtAge"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/secondActivityIdTxtVAgeValue"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/secondActivityIdSbAge"
        app:layout_constraintRight_toLeftOf="@+id/secondActivityIdTxtVAgeValue"
        app:layout_constraintTop_toTopOf="@+id/secondActivityIdTxtVAgeValue"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/secondActivityIdBtnOk"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/initialActivityBtnOk"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
